--- a/Arsenic.Rmd
+++ b/Arsenic.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 <!-- Don't edit in between this line and the one below -->
 ```{r include=FALSE}
-# Don't delete this chunk if you are using the DataComputing package
+# general packages you need to run the code
 library(DataComputing)
 library(ggplot2)
 library(dplyr)
@@ -18,6 +18,7 @@ library(XML)
 library(readxl)
 library(lubridate)
 
+# geospatial analysis tools needed to run maps and interpolations
 library(gstat)
 library(sp)
 library(maptools)
@@ -25,13 +26,15 @@ library(spatstat)
 ```
 *Source file* 
 ```{r, results='asis', echo=FALSE}
-includeSourceDocuments()
+includeSourceDocuments() 
 ```
 <!-- Don't edit the material above this line -->
 
 
+##Arsenic data
 ```{r}
-## download arsenic data--destfile will need to be changed for specific computer
+## DOWNLOAD FILE
+## downloads arsenic excel file into temp file without permanently downloading onto the computer
 url <- "https://water.usgs.gov/nawqa/trace/data/arsenic_nov2001.xls"
 tmp <- tempfile(fileext=".xls")
 download.file(url,destfile=tmp, mode="wb")
@@ -40,18 +43,24 @@ arsenic <- read_excel(tmp, skip=58)
 ## DATA CLEANING
 ## get rid of non-continental US data (Alaska, Puerto Rico, Virgin Islands)
 arsenic <- arsenic[!arsenic$STATE %in% c("AK","PR","VI"),]
-## get rid of columns we don't need (especially becuase a few of the columns loaded in really weird)
+## only keep columns we need (especially becuase a few of the unnecessary columns loaded in really weird)
+## columns needed: state, fips code, arsenic concentration, latitude & longitude
 arsenic <- arsenic %>%
   dplyr::select(STATE,FIPS,AS_CONC,LAT_DD,LON_DD)
 ## many numeric data is in character form--change from character to numeric
+## you can see the data form for all columns using:
+## str(arsenic)
 arsenic$LAT_DD <- as.numeric(arsenic$LAT_DD)
 arsenic$LON_DD <- as.numeric(arsenic$LON_DD)
 arsenic$AS_CONC <- as.numeric(arsenic$AS_CONC)
 arsenic$FIPS <- as.numeric(arsenic$FIPS)
-## take out any observations missing sample date
+## take out any observations with incomplete data (eg. missing fips or arsenic)
 arsenic <- arsenic[complete.cases(arsenic[,2]),]
 
+```
 
+##US county map
+```{r}
 ## bring in map of all counties from Katelyn's code: ggplotMapsTEST.Rmd
 library(tigris)
 us.map <- tigris::counties(cb = TRUE, year = 2015)
@@ -68,12 +77,13 @@ ggplot() +
   geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
   geom_point(data=arsenic, aes(x=-LON_DD, y=LAT_DD, col=AS_CONC))
 
+```
 
+##Interpolation of arsenic data
+
+The reason we need to interpolate the arsenic data is because we only have point data from the field stations that take arsenic measurements. This doesn't cover every county in the US. In order to create a continuous data of arsesnic concentrations across the US, we do a spatial interpolation that essentially takes the point arsenic concentrations and estimates the arsenic concentration across the entire area using a geospatial statistical model. In this case, the units of interpolation are 0.1 degree longitude by 0.1 degree latitude (roughly 0.25 sq mi), which means we get an arsenic concentration for every 0.25 sq mi area of the US. Then we calculate the average arsenic concentration for each county. This way we get an estimated arsenic concentration for each county.
+```{r}
 ## PREPPIND DATA FOR INTERPOLATION
-#xy <- arsenic[, c(9,10)]
-#xy$LON_DD <- -1*xy$LAT_DD
-#spdf <- SpatialPointsDataFrame(coords = xy, data = arsenic, proj4string = CRS("+proj=longlat +datum=NAD83 +no_defs +ellps=GRS80 +towgs84=0,0,0"))
-
 ## duplicate cleaned arsenic data to prevent overwriting
 arsenic_test <- arsenic
 ## assign coordinates--LON must be multiplied by negative to reflect that it is located in the W. Hemisphere
@@ -81,24 +91,31 @@ arsenic_test <- arsenic
 arsenic_test$x <- -1*arsenic_test$LON_DD
 arsenic_test$y <- arsenic_test$LAT_DD
 
-## this makes the arsenic_test into a spatial data
+## this makes arsenic_test into a spatial data
 coordinates(arsenic_test) = ~x + y
 plot(arsenic_test)
 ## define the projection for arsenic_test to match the projection for us.map
 proj4string(arsenic_test) <- proj4string(us.map)
 
+## setting the interpolation area
+## basically the 4 most outer points of us.map in terms of longitude and latitude
+## you can check this using:
+summary(us.map)  ## see coordinates min & max
 x.range <- as.numeric(c(-125, -66))  # min/max longitude of the interpolation area
 y.range <- as.numeric(c(24, 50))  # min/max latitude of the interpolation area
 
-grd <- expand.grid(x = seq(from = x.range[1], to = x.range[2], by = 0.1), y = seq(from = y.range[1], to = y.range[2], by = 0.1))  # expand points to grid
+## this creates the interpolation grid
+## it specifies the interpolatino area, and the resolution--in this case 0.1 deg. lon. x 0.1 deg. lat.
+grd <- expand.grid(x = seq(from = x.range[1], to = x.range[2], by = 0.1), y = seq(from = y.range[1], to = y.range[2], by = 0.1))
 coordinates(grd) <- ~x + y # define spatial coordinates of grd
 proj4string(grd) <- proj4string(us.map) #with the same projections
 gridded(grd) <- TRUE
+
 ## visualization of grid and arsenic data
 plot(grd, cex = 1.5, col = "grey")
 points(arsenic_test, pch = 1, col = "red", cex = 1)
 
-## perform the interpolation!
+## perform the interpolation! (this will take ~20min)
 idw <- krige(AS_CONC ~ 1, arsenic_test, grd)
 idw.out = as.data.frame(idw)
 names(idw.out)[1:3] <- c("long", "lat", "arsenic_pred")
@@ -113,18 +130,27 @@ ggplot() +
 
 ```
 
+
+## Summarizing the interpolated data
+
+Now we have arsenic values for every ~0.25 sq mi of the US. Next we want to find the average arsenic concentration per county.
 ```{r}
 library(raster)
+
+## convert results of interpolation from spatial pixel data to spatial raster data
 idw_raster <- raster(idw)
+## take the mean raster value (= arsenic concentrations) within the bounds of each county defined by us.map
 avgArsenic <- extract(idw_raster, us.map, fun = mean, sp=TRUE)
+## convert results to data frame for data manipulation
 avgArsenic_df <- as.data.frame(avgArsenic)
 
+## join arsenic info to county_map using identital fips for easy plotting
 county_map_As <- left_join(county_map, avgArsenic_df, by = c("id" = "GEOID"))
 
 ggplot() +
     #blank county map
     geom_polygon(data= county_map_As, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
-    #Air quality data
+    #Arsenic data
     geom_polygon(data= county_map_As, aes(x=long, y=lat, group=group, fill = var1.pred), color="black", size=0.25) +
     ggplot2::coord_map() +
     scale_fill_gradientn(colors = c("green", "red"))  +
@@ -145,6 +171,7 @@ ggplot() +
 ```
 
 
+## The only data we actuallly need is here:
 ```{r}
 arsenic_df <- avgArsenic_df %>%
   dplyr::select(GEOID, var1.pred)
