--- a/ggplotMapsAnishaTest.Rmd
+++ b/ggplotMapsAnishaTest.Rmd
@@ -25,130 +25,19 @@ SPATIAL VISUALIZATION: METHOD 1: GGPLOT
 Useful Spatial Packages
 ```{r}
 library(sp)
-#library(rgeos)
-#library(maptools)
-```
-
-Download a sample dataset to visualize: air quality 
-```{r}
-### Begin data prep
-# Grab air/water quality data from the EPA
-url = "https://data.cdc.gov/api/views/cjae-szjv/rows.csv?accessType=DOWNLOAD"
-dat <- read.csv(url, stringsAsFactors = FALSE)
-```
-
-Data Cleaning
-```{r}
-# Convert to lowercase to create standard format among all datasets
-names(dat) <- tolower(names(dat))
-dat$countyname <- tolower(dat$countyname)
-
-# Wide data set -> ubset only what we need
-county_dat <- subset(dat, measureid == "296", 
-                 select = c("countyfips","reportyear", "statename", "countyname", "value", "unitname"))
-
-county_dat <- subset(county_dat, reportyear == 2011, select = c("countyfips","statename", "countyname", "value", "unitname"))
-
-# Rename columns to make for a clean df merge later.
-colnames(county_dat) <- c("fips", "state", "county_name", "value", "unitname")
-
-# Have to add leading zeos to any FIPS code that's less than 5 digits long to get a good match.
-
-# This is some other person's method to use C code. sprintf will work as well.
-county_dat$fips <- formatC(county_dat$fips, width = 5, format = "d", flag = "0")
-
-# Convert full state names to abbreviations for a clean df merge later.
-county_dat$state <- state.abb[match(county_dat$state,state.name)]
-
-```
-
-County Shapefile Acquisition and Cleaning
-
-Downloading county boundary shapefiles (METHOD 1: TIGRIS Package)
-~~~~~~~NEED TO DEFINE LOCATION~~~~~~~~~
-```{r}
-library(tigris)
-location <- c("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/cb_2016_us_county_500k")
-# Download county shape file from US Census using streamlined TIGRIS package. 
-#cb = TRUE indicates that we're choosing simplified cartographic boundaries
-us.map <- tigris::counties(cb = TRUE, year = 2015)
-
-#names(us.map)
-#summary(us.map)
-#View(us.map)
-
-```
-
-Downloading county boundary shapefiles (METHOD 2: Manual read-in of raw shapefile from US Census)
-```{r}
+library(sp)
+library(rgeos)
 library(rgdal)
-# Download county shape file from https://www.census.gov/geo/maps-data/data/tiger.html
-us.map <- readOGR(dsn = location, layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
-
-
-#names(us.map)
-#summary(us.map)
-#View(us.map)
-
-#Paths for other group members
-#"C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k"
-```
-
-Map data Cleaning
-```{r}
-# Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
-#  Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
-us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
-                                        "64", "68", "70", "74"),]
-# Make sure other outling islands are removed.
-us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
-                                        "95", "79"),]
-#To see the shapfile structure:
-#dog <- as.data.frame(us.map)
-#head(dog)
-
-#Converting shapefile to dataframe for visualization
-
-#deprecated method:
-#county_map <- ggplot2::fortify(us.map, region="GEOID")
-
-library(broom)
-county_map <- tidy(us.map, region="GEOID")
-
-#Join sample air quality data to spatial data
+library(maptools)
 library(dplyr)
-county_map <- left_join(county_map, county_dat, by = c("id" = "fips"))
+library(leaflet)
+library(scales)
 
-head(county_map)
 ```
+
 
 Plotting the data about the county lines
 https://www.census.gov/cgi-bin/geo/shapefiles/index.php?year=2016&layergroup=Counties+%28and+equivalent%29
-
-```{r}
-library(mapproj)
-library(ggplot2)
-ggplot() +
-    #blank county map
-    geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
-    #Air quality data
-    geom_polygon(data= county_map, aes(x=long, y=lat, group=group, fill = value), color="black", size=0.25) +
-    ggplot2::coord_map() +
-    scale_fill_gradientn(colors = c("green", "red"))  +
-    labs(title="Air Quality") + 
-    theme_bw() +
-    theme(axis.line=element_blank(),
-          axis.text.x=element_blank(),
-          axis.text.y=element_blank(),
-          axis.ticks=element_blank(),
-          axis.title.x=element_blank(),
-          axis.title.y=element_blank(),
-          panel.grid.major = element_blank(),
-          panel.grid.minor = element_blank(),
-          panel.border = element_blank(),
-          panel.background = element_blank(),
-          legend.title=element_blank())
-```
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 SPATIAL VISUALIZATION: METHOD 1: Interactive maps with Leaflet
@@ -156,8 +45,6 @@ SPATIAL VISUALIZATION: METHOD 1: Interactive maps with Leaflet
 
 Random Playing with leaflet
 ```{r}
-library(leaflet)
-
 leaflet() %>%
   addTiles(county_map$value) #%>%
   #addPolygons(data = )
@@ -169,17 +56,6 @@ leaflet() %>% addTiles() %>% setView(-93.65, 42.0285, zoom = 4) %>%
     options = WMSTileOptions(format = "image/png", transparent = TRUE),
     attribution = "Weather data © 2012 IEM Nexrad"
   )
-```
-
-Useful packages
-```{r}
-library(sp)
-library(rgeos)
-library(rgdal)
-library(maptools)
-library(dplyr)
-library(leaflet)
-library(scales)
 ```
 
 Download air quality data 
@@ -209,13 +85,15 @@ county_dat$GEOID <- formatC(county_dat$GEOID, width = 5, format = "d", flag = "0
 ```
 
 Download county boundary shapefile
+Downloading county boundary shapefiles (METHOD 2: Manual read-in of raw shapefile from US Census)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Change location according to where the county map file is
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```{r}
 # Download county shape file from Tiger.
 # https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html
+location <- c("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/cb_2016_us_county_500k")
 us.map <- readOGR(dsn = location, layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
-
-# Other paths:
-# "C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k"
 ```
 
 Clean county shapefile 
@@ -229,7 +107,6 @@ us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76"
                                         "95", "79"),]
 # Merge spatial df with air quality data.
 leafmap <- merge(us.map, county_dat, by=c("GEOID"))
-
 
 # I HAVE NO IDEA HOW THINGS WORK BELOW THIS POINT 
 
@@ -248,6 +125,5 @@ leaflet(data = leafmap) %>% addTiles() %>%
                 color = "#BDBDC3", 
                 weight = 1,
                 popup = popup_dat)
-
 ```
 
